--- a/css/main.css
+++ b/css/main.css
@@ -578,6 +578,40 @@ h1, h2, h3, h4, h5, h6 {
   font-family: iran-sharp;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .btn-primary{
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
@@ -975,6 +1009,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.mt-auto{
+  margin-top: auto;
 }
 
 .block{
