--- a/css/main.css
+++ b/css/main.css
@@ -636,6 +636,12 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 2;
 }
 
+.toast-show{
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 1;
+}
+
 .btn-primary{
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
@@ -879,6 +885,10 @@ h1, h2, h3, h4, h5, h6 {
   right: 1rem;
 }
 
+.right-5{
+  right: 1.25rem;
+}
+
 .right-8{
   right: 2rem;
 }
@@ -909,6 +919,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .top-4{
   top: 1rem;
+}
+
+.top-5{
+  top: 1.25rem;
 }
 
 .z-40{
@@ -1221,6 +1235,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .translate-x-16{
   --tw-translate-x: 4rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[-20px\]{
+  --tw-translate-y: -20px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1753,6 +1772,10 @@ h1, h2, h3, h4, h5, h6 {
   padding-inline-start: 2rem;
 }
 
+.pt-1{
+  padding-top: 0.25rem;
+}
+
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -1767,10 +1790,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .pt-8{
   padding-top: 2rem;
-}
-
-.pt-1{
-  padding-top: 0.25rem;
 }
 
 .text-left{
@@ -2303,18 +2322,6 @@ h1, h2, h3, h4, h5, h6 {
     row-gap: 0px;
   }
 
-  .sm\:space-x-6 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-y-reverse: 0;
-    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
   .sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2324,10 +2331,6 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width: 768px){
   .md\:col-span-2{
     grid-column: span 2 / span 2;
-  }
-
-  .md\:mb-0{
-    margin-bottom: 0px;
   }
 
   .md\:block{
