--- a/css/main.css
+++ b/css/main.css
@@ -578,6 +578,58 @@ h1, h2, h3, h4, h5, h6 {
   font-family: iran-sharp;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
+.map-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+  /* This creates a 16:9 aspect ratio. Use 75% for 4:3 */
+}
+
+.map-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .bg-metrics {
   position: relative;
   /* This is crucial for positioning the overlay */
@@ -636,6 +688,37 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 2;
 }
 
+.bg-contact {
+  position: relative;
+  /* This is crucial for positioning the overlay */
+  background-image: url('../assets/images/bg-contact.webp');
+  /* <-- CHANGE THIS to your image path */
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  /* This creates the cool parallax effect */
+}
+
+.bg-contact::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  /* Makes the overlay cover the entire section */
+  background-color: rgba(30, 58, 138, 0.85);
+  /* This is your primary color with 85% opacity */
+  z-index: 1;
+  /* Sits on top of the background image */
+}
+
+/* We need to make sure the content sits on top of the overlay */
+
+.bg-contact > * {
+  position: relative;
+  z-index: 2;
+}
+
+/* We need to make sure the content sits on top of the overlay */
+
 .btn-accent {
   /* ADD active:scale-95 to this line */
   border-radius: 0.5rem;
@@ -674,6 +757,41 @@ h1, h2, h3, h4, h5, h6 {
   --tw-scale-x: .95;
   --tw-scale-y: .95;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.nav-link{
+  position: relative;
+  overflow: hidden;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  /* We add py-2 to give the line some space */
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  height: 2px;
+  width: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
+  /* This is the blue line */
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-property: transform;
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* Hides it to the left */
+}
+
+/* This rule makes the line slide in on hover OR for the active link */
+
+.nav-link:hover::after,
+  .nav-link.active::after{
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  /* Slides it into view */
 }
 
 .btn-primary{
@@ -859,10 +977,6 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0px;
 }
 
-.bottom-1\/3{
-  bottom: 33.333333%;
-}
-
 .bottom-16{
   bottom: 4rem;
 }
@@ -877,10 +991,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .left-1\/2{
   left: 50%;
-}
-
-.left-1\/3{
-  left: 33.333333%;
 }
 
 .left-12{
@@ -901,10 +1011,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .right-1\/2{
   right: 50%;
-}
-
-.right-1\/3{
-  right: 33.333333%;
 }
 
 .right-2{
@@ -933,10 +1039,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .top-1\/2{
   top: 50%;
-}
-
-.top-1\/4{
-  top: 25%;
 }
 
 .top-16{
@@ -1099,6 +1201,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .h-12{
   height: 3rem;
+}
+
+.h-14{
+  height: 3.5rem;
 }
 
 .h-16{
@@ -1499,6 +1605,11 @@ h1, h2, h3, h4, h5, h6 {
 .border-accent{
   --tw-border-opacity: 1;
   border-color: rgb(234 88 12 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
 }
 
 .border-primary{
