--- a/css/main.css
+++ b/css/main.css
@@ -562,6 +562,7 @@ video {
 
 html {
   font-family: iran-sharp;
+  scroll-behavior: smooth;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -612,6 +613,13 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.carousel-slide{
+  transition-property: opacity;
+  transition-duration: 1000ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* 1-second fade */
+}
+
 #image-modal.modal-open{
   pointer-events: auto;
   opacity: 1;
@@ -623,13 +631,12 @@ h1, h2, h3, h4, h5, h6 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+/* Positioning for the main (level 1) dropdown */
+
 .dropdown-menu{
   position: absolute;
-  right: 0px;
-  top: 100%;
   width: 14rem;
   transform-origin: top right;
-  padding-top: 0.5rem;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
@@ -654,17 +661,58 @@ h1, h2, h3, h4, h5, h6 {
   --tw-scale-y: .95;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   opacity: 0;
-  /* Hidden state */
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-  /* Smooth transition */
+  right: 0px;
+  top: 100%;
+  padding-top: 0.5rem;
 }
 
-/* The visible state when the parent group is hovered */
+/* Positioning for the nested (level 2) dropdown */
 
-.group:hover .dropdown-menu{
+.dropdown-menu-nested{
+  position: absolute;
+  width: 14rem;
+  transform-origin: top right;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity, 1));
+  --tw-ring-opacity: 0.05;
+}
+
+.dropdown-menu-nested:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.dropdown-menu-nested{
+  pointer-events: none;
+  --tw-scale-x: .95;
+  --tw-scale-y: .95;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  opacity: 0;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  left: -11.25rem;
+  top: 0px;
+  width: 11rem;
+}
+
+/* Show the direct child menu (level 1 or 2) on hover */
+
+.group:hover > .dropdown-menu,
+.group:hover > .dropdown-menu-nested{
   pointer-events: auto;
   --tw-scale-x: 1;
   --tw-scale-y: 1;
@@ -1189,10 +1237,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 2rem;
 }
 
-.ml-1{
-  margin-left: 0.25rem;
-}
-
 .ml-2{
   margin-left: 0.5rem;
 }
@@ -1207,6 +1251,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .mr-3{
   margin-right: 0.75rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
 }
 
 .mt-1{
@@ -1281,10 +1329,6 @@ h1, h2, h3, h4, h5, h6 {
   height: 4rem;
 }
 
-.h-2{
-  height: 0.5rem;
-}
-
 .h-24{
   height: 6rem;
 }
@@ -1317,16 +1361,20 @@ h1, h2, h3, h4, h5, h6 {
   height: 1.5rem;
 }
 
-.h-64{
-  height: 16rem;
-}
-
 .h-8{
   height: 2rem;
 }
 
 .h-96{
   height: 24rem;
+}
+
+.h-\[60vh\]{
+  height: 60vh;
+}
+
+.h-\[70vh\]{
+  height: 70vh;
 }
 
 .h-auto{
@@ -1355,14 +1403,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .w-16{
   width: 4rem;
-}
-
-.w-2{
-  width: 0.5rem;
-}
-
-.w-24{
-  width: 6rem;
 }
 
 .w-3{
@@ -1545,9 +1585,9 @@ h1, h2, h3, h4, h5, h6 {
   gap: 2rem;
 }
 
-.gap-x-14{
-  -moz-column-gap: 3.5rem;
-       column-gap: 3.5rem;
+.gap-x-16{
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
 }
 
 .gap-x-2{
@@ -1579,22 +1619,10 @@ h1, h2, h3, h4, h5, h6 {
   row-gap: 0.5rem;
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-6 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]){
@@ -1762,6 +1790,11 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+}
+
 .bg-error{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
@@ -1795,11 +1828,6 @@ h1, h2, h3, h4, h5, h6 {
 .bg-secondary-200{
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
-}
-
-.bg-secondary-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity, 1));
 }
 
 .bg-secondary-50{
@@ -1876,12 +1904,12 @@ h1, h2, h3, h4, h5, h6 {
   --tw-bg-opacity: 0.6;
 }
 
-.bg-opacity-75{
-  --tw-bg-opacity: 0.75;
+.bg-opacity-70{
+  --tw-bg-opacity: 0.7;
 }
 
-.bg-opacity-80{
-  --tw-bg-opacity: 0.8;
+.bg-opacity-75{
+  --tw-bg-opacity: 0.75;
 }
 
 .bg-opacity-85{
@@ -1987,6 +2015,10 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 1.5rem;
 }
 
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
 .pe-8{
   padding-inline-end: 2rem;
 }
@@ -2021,6 +2053,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .pt-2{
   padding-top: 0.5rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
 }
 
 .pt-4{
@@ -2145,6 +2181,10 @@ h1, h2, h3, h4, h5, h6 {
   font-style: italic;
 }
 
+.leading-relaxed{
+  line-height: 1.625;
+}
+
 .text-accent{
   --tw-text-opacity: 1;
   color: rgb(234 88 12 / var(--tw-text-opacity, 1));
@@ -2168,11 +2208,6 @@ h1, h2, h3, h4, h5, h6 {
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(30 58 138 / var(--tw-text-opacity, 1));
-}
-
-.text-primary-700{
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity, 1));
 }
 
 .text-secondary-300{
@@ -2208,11 +2243,6 @@ h1, h2, h3, h4, h5, h6 {
 .text-success-600{
   --tw-text-opacity: 1;
   color: rgb(5 150 105 / var(--tw-text-opacity, 1));
-}
-
-.text-success-700{
-  --tw-text-opacity: 1;
-  color: rgb(4 120 87 / var(--tw-text-opacity, 1));
 }
 
 .text-text-primary{
@@ -2310,16 +2340,8 @@ h1, h2, h3, h4, h5, h6 {
   transition-duration: 150ms;
 }
 
-.duration-200{
-  transition-duration: 200ms;
-}
-
 .duration-300{
   transition-duration: 300ms;
-}
-
-.duration-500{
-  transition-duration: 500ms;
 }
 
 .ease-in-out{
@@ -2469,18 +2491,9 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-primary:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-secondary-50:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-opacity-100:hover{
-  --tw-bg-opacity: 1;
 }
 
 .hover\:bg-opacity-20:hover{
@@ -2552,11 +2565,6 @@ h1, h2, h3, h4, h5, h6 {
   --tw-ring-color: rgb(234 88 12 / var(--tw-ring-opacity, 1));
 }
 
-.group:hover .group-hover\:rotate-180{
-  --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .group:hover .group-hover\:scale-105{
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -2605,6 +2613,11 @@ h1, h2, h3, h4, h5, h6 {
     row-gap: 0px;
   }
 
+  .sm\:px-3{
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
   .sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2646,6 +2659,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (min-width: 1024px){
+  .lg\:order-last{
+    order: 9999;
+  }
+
   .lg\:col-span-2{
     grid-column: span 2 / span 2;
   }
