--- a/css/main.css
+++ b/css/main.css
@@ -1391,6 +1391,12 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0;
 }
 
+.text-justify {
+  text-align: justify;
+  text-justify: inter-word;
+  /* improves spacing between words */
+}
+
 .cert-animate {
   animation: cert-scroll 10s linear infinite;
 }
@@ -1645,7 +1651,7 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   text-align: right;
-  font-size: clamp(0.875rem, 0.55rem + 0.625vw, 1rem);
+  font-size: clamp(0.6rem, 0.6rem + 0.3vw, 1.3rem);
   --tw-text-opacity: 1;
   color: rgb(51 65 85 / var(--tw-text-opacity, 1));
   border-radius: 0.375rem;
@@ -1745,7 +1751,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .btn-accent {
   /* ADD active:scale-95 to this line */
-  border-radius: 0.5rem;
+  border-radius: 9999px;
   --tw-bg-opacity: 1;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity, 1));
   padding-left: 1.5rem;
@@ -2038,6 +2044,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .bottom-2{
   bottom: 0.5rem;
+}
+
+.bottom-4{
+  bottom: 1rem;
 }
 
 .bottom-8{
@@ -2447,6 +2457,10 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
 }
 
+.w-screen{
+  width: 100vw;
+}
+
 .max-w-2xl{
   max-width: 42rem;
 }
@@ -2846,6 +2860,11 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
+}
+
 .bg-blue-800{
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity, 1));
@@ -2876,9 +2895,19 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
 
+.bg-green-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity, 1));
+}
+
 .bg-orange-500{
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity, 1));
 }
 
 .bg-primary{
@@ -2995,10 +3024,29 @@ h1, h2, h3, h4, h5, h6 {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-r{
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
 .from-blue-50{
   --tw-gradient-from: #eff6ff var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(239 246 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-orange-600{
+  --tw-gradient-from: #ea580c var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(234 88 12 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-emerald-600{
+  --tw-gradient-to: rgb(5 150 105 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #059669 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.to-blue-700{
+  --tw-gradient-to: #1d4ed8 var(--tw-gradient-to-position);
 }
 
 .to-gray-200{
@@ -3087,6 +3135,11 @@ h1, h2, h3, h4, h5, h6 {
 .py-20{
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
 .py-3{
@@ -3196,12 +3249,20 @@ h1, h2, h3, h4, h5, h6 {
   text-align: right;
 }
 
+.text-justify{
+  text-align: justify;
+}
+
 .text-start{
   text-align: start;
 }
 
 .text-end{
   text-align: end;
+}
+
+.align-middle{
+  vertical-align: middle;
 }
 
 .font-body{
@@ -3261,7 +3322,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .text-sm{
-  font-size: clamp(0.875rem, 0.55rem + 0.625vw, 1rem);
+  font-size: clamp(0.6rem, 0.6rem + 0.3vw, 1.3rem);
 }
 
 .text-xl{
@@ -3360,6 +3421,11 @@ h1, h2, h3, h4, h5, h6 {
   color: rgb(74 222 128 / var(--tw-text-opacity, 1));
 }
 
+.text-indigo-800{
+  --tw-text-opacity: 1;
+  color: rgb(55 48 163 / var(--tw-text-opacity, 1));
+}
+
 .text-orange-400{
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity, 1));
@@ -3370,9 +3436,24 @@ h1, h2, h3, h4, h5, h6 {
   color: rgb(234 88 12 / var(--tw-text-opacity, 1));
 }
 
+.text-orange-700{
+  --tw-text-opacity: 1;
+  color: rgb(194 65 12 / var(--tw-text-opacity, 1));
+}
+
+.text-pink-600{
+  --tw-text-opacity: 1;
+  color: rgb(219 39 119 / var(--tw-text-opacity, 1));
+}
+
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(30 58 138 / var(--tw-text-opacity, 1));
+}
+
+.text-purple-800{
+  --tw-text-opacity: 1;
+  color: rgb(107 33 168 / var(--tw-text-opacity, 1));
 }
 
 .text-secondary-300{
@@ -3420,6 +3501,11 @@ h1, h2, h3, h4, h5, h6 {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-yellow-500{
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity, 1));
+}
+
 .opacity-0{
   opacity: 0;
 }
@@ -3438,6 +3524,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .opacity-90{
   opacity: 0.9;
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-2xl{
@@ -4000,6 +4092,11 @@ h1, h2, h3, h4, h5, h6 {
   background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-blue-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-blue-900:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
@@ -4008,6 +4105,21 @@ h1, h2, h3, h4, h5, h6 {
 .hover\:bg-gray-300:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-green-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-orange-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-primary-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-secondary-50:hover{
@@ -4160,6 +4272,16 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
+  .sm\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .sm\:px-2{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
 }
 
 @media (min-width: 768px){
@@ -4287,6 +4409,11 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: row;
   }
 
+  .lg\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
@@ -4295,5 +4422,10 @@ h1, h2, h3, h4, h5, h6 {
   .lg\:py-32{
     padding-top: 8rem;
     padding-bottom: 8rem;
+  }
+
+  .lg\:px-2{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 }
